iptables.txt
# Generated by iptables-save v1.6.1 on Tue Aug 4 05:47:27 2020
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Allowed IPs
-A INPUT -s 73.250.125.136/32 -j ACCEPT
-A INPUT -s 15.204.158.51/32 -j ACCEPT
-A INPUT -s 135.148.168.25/32 -j ACCEPT
-A INPUT -s 51.81.196.240/32 -j ACCEPT
-A INPUT -s 15.204.158.44/32 -j ACCEPT
-A INPUT -s 172.67.147.122/32 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -j ACCEPT
#Check Host
-A INPUT -s 77.75.230.51/32 -j ACCEPT
-A INPUT -s 185.244.28.234/32 -j ACCEPT
-A INPUT -s 91.194.11.21/32 -j ACCEPT
-A INPUT -s 212.129.21.56/32 -j ACCEPT
-A INPUT -s 46.4.143.48/32 -j ACCEPT
-A INPUT -s 185.37.147.117/32 -j ACCEPT
-A INPUT -s 194.156.98.193/32 -j ACCEPT
-A INPUT -s 185.105.238.209/32 -j ACCEPT
-A INPUT -s 185.25.204.60/32 -j ACCEPT
-A INPUT -s 185.120.77.165/32 -j ACCEPT
-A INPUT -s 88.119.179.10/32 -j ACCEPT
-A INPUT -s 178.17.171.235/32 -j ACCEPT
-A INPUT -s 185.209.161.169/32 -j ACCEPT
-A INPUT -s 185.83.213.25/32 -j ACCEPT
-A INPUT -s 194.26.229.20/32 -j ACCEPT
-A INPUT -s 185.130.104.238/32 -j ACCEPT
-A INPUT -s 194.146.57.64/32 -j ACCEPT
-A INPUT -s 179.43.148.195/32 -j ACCEPT
-A INPUT -s 185.169.54.231/32 -j ACCEPT
-A INPUT -s 185.86.77.126/32 -j ACCEPT
-A INPUT -s 91.243.34.23/32 -j ACCEPT
-A INPUT -s 185.143.223.66/32 -j ACCEPT
-A INPUT -s 5.253.30.82/32 -j ACCEPT
-A INPUT -s 138.124.180.144/32 -j ACCEPT
-A INPUT -s 185.143.223.66/32 -j ACCEPT
-A INPUT -s 194.156.98.193/32 -j ACCEPT
# Blocked IP's
-A INPUT -s 224.0.0.0/3 -j DROP
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 192.0.2.0/24 -j DROP
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 240.0.0.0/5 -j DROP
-A INPUT -s 127.0.0.0/8 ! -i lo -j DROP
# Pre Firewall
-A INPUT -p tcp -m connlimit --connlimit-above 8 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j DROP
-A INPUT -p icmp -m icmp ! --icmp-type 8 -j ACCEPT
# Proxy Filter
-A INPUT -p tcp -m tcp -m multiport --dports 80,443 -m string --string "X-Forwarded" --algo bm --to 500 -j DROP

# Strict Mode
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 -m connlimit --connlimit-above 2 --connlimit-mask 32 --connlimit-saddr -j DROP
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 --syn -m hashlimit --hashlimit-upto 1/min --hashlimit-burst 6 --hashlimit-mode srcip --hashlimit-name conn-rate-limit --hashlimit-htable-max 30000 --hashlimit-htable-expire 10000 -j ACCEPT

# Power Mode
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 -m connlimit --connlimit-above 6 --connlimit-mask 32 --connlimit-saddr -j DROP
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 --syn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 6 --hashlimit-mode srcip --hashlimit-name conn-rate-limit --hashlimit-htable-max 30000 --hashlimit-htable-expire 10000 -j ACCEPT

# Moderate Mode
-A INPUT -p tcp -m tcp -m connlimit --connlimit-above 8 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -p tcp -m tcp --syn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name conn-rate-limit --hashlimit-htable-max 30000 --hashlimit-htable-expire 10000 -j ACCEPT

# Relief Mode
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 -m connlimit --connlimit-above 12 --connlimit-mask 32 --connlimit-saddr -j DROP
#-A INPUT -p tcp -m tcp -m multiport --dports 80,443 --syn -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name conn-rate-limit --hashlimit-htable-max 30000 --hashlimit-htable-expire 10000 -j ACCEPT
#Apache Firewall

COMMIT
#EOF
